@@ -1,3 +1,6 @@
+2011-06-25 Holger Vogt
+ * ivars.c: fix usage of dirname()
+
 2011-06-25  Robert Larice
  * src/ngsconvert.c :
    ngsconvert.c, swallow type conversion warnings
